apps/journiv/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journiv-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journiv-app
  template:
    metadata:
      labels:
        app: journiv-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: journiv-app
        image: swalabtech/journiv-app:0.1.0-beta.24
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: journiv-data
          mountPath: /data
          subPath: app
      volumes:
      - name: journiv-data
        persistentVolumeClaim:
          claimName: journiv-data
