apps/journiv/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: celery-beat
        image: swalabtech/journiv-app:0.1.0-beta.24
        volumeMounts:
        - name: journiv-data
          mountPath: /data
          subPath: app
      volumes:
      - name: journiv-data
        persistentVolumeClaim:
          claimName: journiv-data
