apps/journiv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journiv-app
  annotations:
    tailscale.com/expose: "true"
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: journiv-app
