apps/journiv/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journiv
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: journiv-app
      port:
        number: 80
  tls:
    - hosts:
        - journiv
